moved the text logic to the annotation architecture